Fix accessibility issues

--- a/src/components/AssistanceSection.astro
+++ b/src/components/AssistanceSection.astro
@@ -9,10 +9,12 @@ import Button from "./ui/button.astro";
     <img
       src={TopLeaf.src}
       class="w-20 md:w-fit absolute -top-10 md:-top-16 right-0 md:right-20 z-0"
+      alt="Greensoftware Leaf"
     />
     <img
       src={BottomLeaf.src}
       class="w-20 md:w-fit absolute -bottom-10 md:-bottom-16 left-0 md:left-20 z-0"
+      alt="Greensoftware Leaf"
     />
   </div>
 
