--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const year = new Date().getFullYear();
   <div class="grid grid-cols-1 md:grid-cols-4 md:space-x-24">
     <div class="flex flex-col gap-4">
       <img src={logo.src} alt="Champions Logo" class="w-40 mx-auto md:mx-0" />
-      <p  class="text-[#FFFFFF80] text-xs font-normal pt-4">
+      <p  class="text-gray-300 text-xs font-normal pt-4">
         Copyright © {year} Joint Development Foundation Projects, LLC, Green
         Software Foundation Series <br /><br /> The Joint Development Foundation
         Projects, LLC is an affiliate of the Linux Foundation.
@@ -26,11 +26,11 @@ const year = new Date().getFullYear();
       </h1>
 
       <div class="flex flex-col gap-4">
-        <a href="https://grnsft.org/champions/contact" class="text-xs text-[#FFFFFF80]"
+        <a href="https://grnsft.org/champions/contact" class="text-xs text-gray-300"
           >Contact a Green Software Champion</a
         >
-        <a href="https://grnsft.org/champions/chairguide" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">For GSF Project & WG Chairs</a>
-        <a href="https://github.com/Green-Software-Foundation/champions" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">GitHub Repo</a>
+        <a href="https://grnsft.org/champions/chairguide" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">For GSF Project & WG Chairs</a>
+        <a href="https://github.com/Green-Software-Foundation/champions" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">GitHub Repo</a>
       </div>
     </div>
 
@@ -43,9 +43,9 @@ const year = new Date().getFullYear();
         ></span>
       </h1>
       <div class="flex flex-col gap-4">
-        <a href="https://greensoftware.foundation/policy/trademark" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">Trademark Policy</a>
-        <a href="https://greensoftware.foundation/policy/terms" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">Privacy Policy</a>
-        <a href="https://greensoftware.foundation/policy/terms" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">Terms and Conditions</a>
+        <a href="https://greensoftware.foundation/policy/trademark" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">Trademark Policy</a>
+        <a href="https://greensoftware.foundation/policy/terms" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">Privacy Policy</a>
+        <a href="https://greensoftware.foundation/policy/terms" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">Terms and Conditions</a>
       </div>
     </div>
 
@@ -58,9 +58,9 @@ const year = new Date().getFullYear();
         ></span>
       </h1>
       <div class="flex flex-col gap-4">
-        <a href="https://greensoftware.foundation/" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">Website</a>
-        <a href="https://twitter.com/gsfcommunity" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">Twitter</a>
-        <a href="https://www.linkedin.com/company/green-software-foundation/" target="_blank" rel="noopener noreferrer" class="text-xs text-[#FFFFFF80]">LinkedIn</a>
+        <a href="https://greensoftware.foundation/" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">Website</a>
+        <a href="https://twitter.com/gsfcommunity" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">Twitter</a>
+        <a href="https://www.linkedin.com/company/green-software-foundation/" target="_blank" rel="noopener noreferrer" class="text-xs text-gray-300">LinkedIn</a>
       </div>
     </div>
   </div>
