--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Directory from "@/components/Directory";
         >
           Champions Directory
         </h1>
-        <p class="mt-6 md:text-lg text-gray-darker">
+        <p class="mt-6 md:text-lg text-gray-600">
           The Green Software Champions project showcases the amazing work of our community. Find amazing speakers, writers, organizers, mentors & contributors around the world who are leading the way in decarbonizing software.
         </p>
       </div>
